:sparkles: feat: support anthropic as model provider

--- a/docs/self-hosting/environment-variables/model-provider.mdx
+++ b/docs/self-hosting/environment-variables/model-provider.mdx
@@ -144,3 +144,21 @@ When using the `turn` mode, the API Keys will be retrieved in a round-robin mann
 - Description: Used to enable the Ollama service, setting this will display optional open-source language models in the language model list and can also specify custom language models
 - Default: -
 - Example: `http://127.0.0.1:11434/v1`
+
+## Perplexity AI
+
+### `PERPLEXITY_API_KEY`
+
+- Type: Required
+- Description: This is the API key you applied from Perplexity AI
+- Default: -
+- Example: `pplx-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx`
+
+## Anthropic AI
+
+### `ANTHROPIC_API_KEY`
+
+- Type: Required
+- Description: This is the API key you applied from Anthropic AI
+- Default: -
+- Example: `sk-ant-apixx-xxxxxxxxx-xxxxxxxxxxxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-xxxxxxxx`
