:memo: docs: sso docs for azure-ad

--- a/docs/self-hosting/advanced/authentication.zh-CN.mdx
+++ b/docs/self-hosting/advanced/authentication.zh-CN.mdx
@@ -49,10 +49,14 @@ http(s)://your-domain/api/auth/callback/auth0
 | 环境变量 | 类型 | 描述 |
 | --- | --- | --- |
 | `ENABLE_OAUTH_SSO` | 必选 | 为 LobeChat 启用单点登录 (SSO)。设置为 `1` 以启用单点登录。 |
+| `SSO_PROVIDER` | 可选 | 选择 LoboChat 的单点登录提供商。默认为 `auth0`，您可以启用多个单点登录提供商，使用逗号 `,` 进行分割，目前支持 `auth0` 和 `azure-ad`。 | 
 | `NEXTAUTH_SECRET` | 必选 | 用于加密 Auth.js 会话令牌的密钥。您可以使用以下命令生成秘钥： `openssl rand -base64 32` |
-| `AUTH0_CLIENT_ID` | 必选 | Auth0 应用程序的 Client ID |
-| `AUTH0_CLIENT_SECRET` | 必选 | Auth0 应用程序的 Client Secret |
-| `AUTH0_ISSUER` | 必选 | Auth0 应用程序的 Domain，`https://example.auth0.com` |
+| `AUTH0_CLIENT_ID` | 必选(auth0) | Auth0 应用程序的 Client ID |
+| `AUTH0_CLIENT_SECRET` | 必选(auth0) | Auth0 应用程序的 Client Secret |
+| `AUTH0_ISSUER` | 必选(auth0) | Auth0 应用程序的 Domain，`https://example.auth0.com` |
+| `AZURE_AD_CLIENT_ID` | 必选(azure-ad) | Azure Entra ID 应用程序的 Client ID |
+| `AZURE_AD_CLIENT_SECRET` | 必选(azure-ad) | Azure Entra ID 应用程序的 Client Secret |
+| `AZURE_AD_TENANT_ID` | 必选(azure-ad) | Azure Entra ID 应用程序的 Tenant ID |
 | `ACCESS_CODE` | 必选 | 添加访问此服务的密码，你可以设置一个足够长的随机密码以 “禁用” 访问码授权 |
 | `NEXTAUTH_URL` | 可选 | 该URL用于指定 Auth.js 在执行 OAuth 验证时的回调地址，当默认生成的重定向地址发生不正确时才需要设置。`https://example.com/api/auth` |
 
