--- a/docs/self-hosting/advanced/authentication.mdx
+++ b/docs/self-hosting/advanced/authentication.mdx
@@ -48,10 +48,14 @@ When deploying LobeChat, you need to configure the following environment variabl
 | Environment Variable | Type | Description |
 | --- | --- | --- |
 | `ENABLE_OAUTH_SSO` | Required | Enable single sign-on (SSO) for LobeChat. Set to `1` to enable single sign-on. |
+| `SSO_PROVIDER` | Optional | Choose the SSO Provider For LoboChat. Default is `auth0`, you can enable multipual sso provider, split by `,`, currently support `auth0`,`azure-ad` | 
 | `NEXTAUTH_SECRET` | Required | Key used to encrypt Auth.js session tokens. You can generate a key using the following command: `openssl rand -base64 32` |
-| `AUTH0_CLIENT_ID` | Required | Client ID of the Auth0 application |
-| `AUTH0_CLIENT_SECRET` | Required | Client Secret of the Auth0 application |
-| `AUTH0_ISSUER` | Required | Domain of the Auth0 application, `https://example.auth0.com` |
+| `AUTH0_CLIENT_ID` | Required(auth0) | Client ID of the Auth0 application |
+| `AUTH0_CLIENT_SECRET` | Required(auth0) | Client Secret of the Auth0 application |
+| `AUTH0_ISSUER` | Required(auth0) | Domain of the Auth0 application, `https://example.auth0.com` |
+| `AZURE_AD_CLIENT_ID` | Required(azure-ad) | Client ID of the Azure Entra ID application |
+| `AZURE_AD_CLIENT_SECRET` | Required(azure-ad) | Client Secret of the Azure Entra ID application |
+| `AZURE_AD_TENANT_ID` | Required(azure-ad) | Tenant ID of the Azure Entra ID application |
 | `ACCESS_CODE` | Required | Add a password to access this service. You can set a sufficiently long random password to "disable" access code authorization. |
 | `NEXTAUTH_URL` | Optional | The URL is used to specify the callback address for the execution of OAuth authentication in Auth.js. It needs to be set only when the default address is incorrect. `https://example.com/api/auth` |
 
