--- a/docs/usage/features/agent-market.mdx
+++ b/docs/usage/features/agent-market.mdx
@@ -20,7 +20,7 @@ In LobeChat's Assistant Market, creators can discover a vibrant and innovative c
   our platform. We particularly emphasize that LobeChat has established a sophisticated automated
   internationalization (i18n) workflow, which excels in seamlessly converting your assistants into
   multiple language versions. This means that regardless of the language your users are using, they
-  can seamlessly experience your assistant.{' '}
+  can seamlessly experience your assistant.
 </Callout>
 
 <Callout>
