:memo: docs: update docs

--- a/docs/usage/agents/model.mdx
+++ b/docs/usage/agents/model.mdx
@@ -1,6 +1,6 @@
 ---
 title: LLM Guide
-description: Explore our comprehensive Model Guide to understand the capabilities and features of the latest ChatGPT models including gpt-3.5-turbo, gpt-3.5-turbo-16k, gpt-4, and gpt-4-32k. Learn how these models differ in speed, context length, language understanding, and generation capabilities. Gain insights into key model parameters like temperature, top_p, presence penalty, and frequency penalty that influence the randomness, originality, and diversity of the generated text. Whether you're interested in faster text generation or improved language modeling, our guide offers valuable information on selecting the right model and adjusting parameters for optimal performance.
+description: Explore the capabilities of ChatGPT models from gpt-3.5-turbo to gpt-4-32k, understanding their speed, context limits, and cost. Learn about model parameters like temperature and top-p for better output.
 ---
 
 import { Callout } from 'nextra/components';
