:memo: docs: document update

--- a/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.zh-CN.mdx
+++ b/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.zh-CN.mdx
@@ -12,7 +12,7 @@ import { Callout, Steps } from 'nextra/components';
   在 `Redirect URI (optional)` 中，应用类型选择 `Web`，Callback URL, 处填写：
 
   ```bash
-  http(s)://<your-domain>/api/auth/callback/azure-ad
+  https://<your-domain>/api/auth/callback/azure-ad
   ```
 
   <Callout type={'info'}>
@@ -20,17 +20,17 @@ import { Callout, Steps } from 'nextra/components';
     - your-domain 请填写自己的域名
   </Callout>
 
-  ![]()
+  ![App Register](https://github.com/lobehub/lobe-chat/assets/13883964/4f9d83bd-b3fc-4abc-bcf4-ccbad65c219d)
   
   点击「Register」
 
   创建成功后，点击相应的应用，进入应用详情页，切换到「Overview」标签页，就可以看到相应的配置信息。
 
-  ![]()
+  ![App Overview](https://github.com/lobehub/lobe-chat/assets/13883964/48a0b702-05bd-4ce4-a007-a8ad00a36e5a)
 
   进入「Certificates & secrets」，选择「Client secrets」标签，点击「New client secret」，填写描述，选择过期时间，点击「Add」，创建一个新的客户端密钥。
 
-  ![]()
+  ![Create App Client Secret](https://github.com/lobehub/lobe-chat/assets/13883964/c9d66fa0-158c-4bd3-a1fa-969e638259d2)
 
   <Callout type={'info'}>
     - 请务必保存好你的客户端密钥，因为这是你唯一的机会查看它。
