--- a/locales/ar/setting.json
+++ b/locales/ar/setting.json
@@ -99,6 +99,14 @@
         "title": "مفتاح واجهة برمجة التطبيقات"
       }
     },
+    "groq": {
+      "title": "Groq",
+      "token": {
+        "desc": "املأ مفتاح واجهة برمجة التطبيقات الخاص بـ Groq",
+        "placeholder": "مفتاح واجهة برمجة التطبيقات الخاص بـ Groq",
+        "title": "مفتاح واجهة برمجة التطبيقات"
+      }
+    },
     "Mistral": {
       "title": "Mistral AI",
       "token": {
