--- a/locales/fr-FR/setting.json
+++ b/locales/fr-FR/setting.json
@@ -91,6 +91,14 @@
       },
       "title": "Bedrock"
     },
+    "Groq": {
+      "title": "Groq",
+      "token": {
+        "desc": "Entrez la clé API de Groq",
+        "placeholder": "Clé API Groq",
+        "title": "Clé API"
+      }
+    },
     "Google": {
       "title": "Google",
       "token": {
