--- a/locales/zh-CN/error.json
+++ b/locales/zh-CN/error.json
@@ -57,6 +57,7 @@
     "InvalidMoonshotAPIKey": "Moonshot AI API Key 不正确或为空，请检查 Moonshot API Key 后重试",
     "GoogleBizError": "请求 Google 服务出错，请根据以下信息排查或重试",
     "InvalidGoogleAPIKey": "Google API Key 不正确或为空，请检查 Google API Key 后重试",
+    "InvalidGroqAPIKey": "Groq API Key 不正确或为空，请检查 Groq API Key 后重试",
     "InvalidBedrockCredentials": "Bedrock 鉴权未通过，请检查 AccessKeyId/SecretAccessKey 后重试",
     "BedrockBizError": "请求 Bedrock 服务出错，请根据以下信息排查或重试",
     "InvalidAzureAPIKey": "Azure API Key 不正确或为空，请检查 Azure API Key 后重试",
