--- a/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
+++ b/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
@@ -1,5 +1,3 @@
-import { Callout, Steps } from 'nextra/components';
-
 # Configuration of Microsoft Entra ID Authentication Service
 
 <Steps>
@@ -62,13 +60,8 @@ import { Callout, Steps } from 'nextra/components';
 
 ## Advanced Configuration
 
-Please explore further in the [Microsoft Entra ID Learning Center][microsoft-learn-entra].
+Please explore further in the .
 
 ## Related Resources
 
-- [Quickstart: Register an app][microsoft-entra-register-app]
-
-[microsoft-learn-entra]: https://learn.microsoft.com/en-us/entra/identity/
-[microsoft-entra-register-app]: https://learn.microsoft.com/en-us/entra/identity-platform/quickstart-register-app
-[microsoft-azure-portal]: https://portal.azure.com/
-[microsoft-entra-id]: https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id
+- 
