--- a/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
+++ b/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
@@ -1,5 +1,3 @@
-import { Callout, Steps } from 'nextra/components';
-
 # Configuration of Microsoft Entra ID Authentication Service
 
 <Steps>
@@ -55,20 +53,16 @@ import { Callout, Steps } from 'nextra/components';
 | `AZURE_AD_TENANT_ID`     | Required | Tenant ID of the Microsoft Entra ID application.                                                                                                                                                                           |
 | `ACCESS_CODE`            | Required | Add a password for accessing this service, you can set a sufficiently long random password to "disable" access code authorization.                                                                                         |
 | `NEXTAUTH_URL`           | Optional | This URL is used to specify the callback address for Auth.js when performing OAuth authentication. It is only necessary to set it when the default generated redirect address is incorrect. `https://example.com/api/auth` |
-  You can refer to [environment variables](/en/self-hosting/environment-variable#microsoft-entra-id) for details on related variables.
+
+<Callout>You can refer to [environment variables](/en/self-hosting/environment-variable#microsoft-entra-id) for details on related variables.</Callout>
 </Steps>
 
 <Callout>After successful deployment, users will be able to authenticate and use LobeChat using the users configured in Microsoft Entra ID.</Callout>
 
 ## Advanced Configuration
 
-Please explore further in the [Microsoft Entra ID Learning Center][microsoft-learn-entra].
+Please explore further in the .
 
 ## Related Resources
 
-- [Quickstart: Register an app][microsoft-entra-register-app]
-
-[microsoft-learn-entra]: https://learn.microsoft.com/en-us/entra/identity/
-[microsoft-entra-register-app]: https://learn.microsoft.com/en-us/entra/identity-platform/quickstart-register-app
-[microsoft-azure-portal]: https://portal.azure.com/
-[microsoft-entra-id]: https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id
+- 
