--- a/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
+++ b/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
@@ -30,9 +30,7 @@
 
   ![Create App Client Secret](https://github.com/lobehub/lobe-chat/assets/13883964/c9d66fa0-158c-4bd3-a1fa-969e638259d2)
 
-  <Callout type={'info'}>
-    - Please make sure to save your client secret as this is your only chance to view it.
-  </Callout>
+  <Callout type={'info'}>Please make sure to save your client secret as this is your only chance to view it.</Callout>
 
 
   ### Add Users
@@ -54,15 +52,7 @@
 | `ACCESS_CODE`            | Required | Add a password for accessing this service, you can set a sufficiently long random password to "disable" access code authorization.                                                                                         |
 | `NEXTAUTH_URL`           | Optional | This URL is used to specify the callback address for Auth.js when performing OAuth authentication. It is only necessary to set it when the default generated redirect address is incorrect. `https://example.com/api/auth` |
 
-<Callout>You can refer to [environment variables](/en/self-hosting/environment-variable#microsoft-entra-id) for details on related variables.</Callout>
+<Callout type={'info'}>You can refer to [environment variables](/en/self-hosting/environment-variable#microsoft-entra-id) for details on related variables.</Callout>
 </Steps>
 
-<Callout>After successful deployment, users will be able to authenticate and use LobeChat using the users configured in Microsoft Entra ID.</Callout>
-
-## Advanced Configuration
-
-Please explore further in the .
-
-## Related Resources
-
-- 
+<Callout type={'info'}>After successful deployment, users will be able to authenticate and use LobeChat using the users configured in Microsoft Entra ID.</Callout>
