--- a/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.zh-CN.mdx
+++ b/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.zh-CN.mdx
@@ -32,9 +32,7 @@ import { Callout, Steps } from 'nextra/components';
 
   ![Create App Client Secret](https://github.com/lobehub/lobe-chat/assets/13883964/c9d66fa0-158c-4bd3-a1fa-969e638259d2)
 
-  <Callout type={'info'}>
-    - 请务必保存好你的客户端密钥，因为这是你唯一的机会查看它。
-  </Callout>
+  <Callout type={'info'}>请务必保存好你的客户端密钥，因为这是你唯一的机会查看它。</Callout>
 
 
   ### 新增用户
@@ -56,21 +54,7 @@ import { Callout, Steps } from 'nextra/components';
 | `ACCESS_CODE`            | 必选           | 添加访问此服务的密码，你可以设置一个足够长的随机密码以 “禁用” 访问码授权                                                    |
 | `NEXTAUTH_URL`           | 可选           | 该URL用于指定 Auth.js 在执行 OAuth 验证时的回调地址，当默认生成的重定向地址发生不正确时才需要设置。`https://example.com/api/auth` |
 
-  前往 [环境变量](/zh/self-hosting/environment-variable#microsoft-entra-id) 可查阅相关变量详情。
+<Callout type={'info'}>  前往 [环境变量](/zh/self-hosting/environment-variable#microsoft-entra-id) 可查阅相关变量详情。</Callout>
 </Steps>
 
-<Callout>部署成功后，用户将可以使用 Microsoft Entra ID 中配置的用户通过身份认证并使用 LobeChat。</Callout>
-
-## 进阶配置
-
-请在 [Microsoft Entra ID 学习中心][microsoft-learn-entra]，做进一步探索。
-
-
-## 相关资料
-
-- [快速注册应用指导][microsoft-entra-register-app]
-
-[microsoft-learn-entra]: https://learn.microsoft.com/en-us/entra/identity/
-[microsoft-entra-register-app]: https://learn.microsoft.com/en-us/entra/identity-platform/quickstart-register-app
-[microsoft-azure-portal]: https://portal.azure.com/
-[microsoft-entra-id]: https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id
+<Callout type={'info'}>部署成功后，用户将可以使用 Microsoft Entra ID 中配置的用户通过身份认证并使用 LobeChat。</Callout>
