--- a/docs/self-hosting/advanced/sso-providers/auth0.mdx
+++ b/docs/self-hosting/advanced/sso-providers/auth0.mdx
@@ -64,15 +64,15 @@ import { Callout, Steps } from 'nextra/components';
 
 ### Connecting to an Existing Single Sign-On Service
 
-If your enterprise or organization already has a unified identity authentication infrastructure, you can connect to an existing single sign-on service in Applications -> SSO Integrations.
+If your enterprise or organization already has a unified identity authentication infrastructure, you can connect to an existing single sign-on service in Applications -&gt; SSO Integrations.
 
-Auth0 supports single sign-on services such as Azure Active Directory, Slack, Google Workspace, Office 365, Zoom, and more. For a detailed list of supported services, please refer to [this link][auth0-sso-integrations].
+Auth0 supports single sign-on services such as Azure Active Directory, Slack, Google Workspace, Office 365, Zoom, and more. For a detailed list of supported services, please refer to .
 
 ![](https://github.com/CloudPassenger/lobe-chat/assets/30863298/32650f4f-d0b0-4843-b26d-d35bad11d8a3)
 
 ### Configuring Social Login
 
-If your enterprise or organization needs to support external user logins, you can configure social login services in Authentication -> Social.
+If your enterprise or organization needs to support external user logins, you can configure social login services in Authentication -&gt; Social.
 
 ![](https://github.com/CloudPassenger/lobe-chat/assets/30863298/7b6f6a6c-2686-49d8-9dbd-0516053f1efa)
 
@@ -86,7 +86,3 @@ If your enterprise or organization needs to support external user logins, you ca
   the social login option, refer to [this article][auth0-login-actions-manual] to create an Action
   to set up a blocking/allow list.
 </Callout>
-
-[auth0-client-page]: https://manage.auth0.com/dashboard
-[auth0-login-actions-manual]: https://auth0.com/blog/permit-or-deny-login-requests-using-auth0-actions/
-[auth0-sso-integrations]: https://marketplace.auth0.com/features/sso-integrations
