--- a/docs/self-hosting/advanced/sso-providers/auth0.zh-CN.mdx
+++ b/docs/self-hosting/advanced/sso-providers/auth0.zh-CN.mdx
@@ -53,7 +53,7 @@ import { Callout, Steps } from 'nextra/components';
   前往 [环境变量](/zh/self-hosting/environment-variable#auth0) 可查阅相关变量详情。
 </Steps>
 
-<Callout>部署成功后，用户将可以使用 Auth0 中配置的用户通过身份认证并使用 LobeChat。</Callout>
+<Callout type={'info'}>部署成功后，用户将可以使用 Auth0 中配置的用户通过身份认证并使用 LobeChat。</Callout>
 
 ## 进阶配置
 
