--- a/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.zh-CN.mdx
+++ b/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.zh-CN.mdx
@@ -54,7 +54,7 @@ import { Callout, Steps } from 'nextra/components';
 | `ACCESS_CODE`            | 必选           | 添加访问此服务的密码，你可以设置一个足够长的随机密码以 “禁用” 访问码授权                                                    |
 | `NEXTAUTH_URL`           | 可选           | 该URL用于指定 Auth.js 在执行 OAuth 验证时的回调地址，当默认生成的重定向地址发生不正确时才需要设置。`https://example.com/api/auth` |
 
-<Callout type={'info'}>  前往 [环境变量](/zh/self-hosting/environment-variable#microsoft-entra-id) 可查阅相关变量详情。</Callout>
+<Callout type={'info'}>  前往 [📘 环境变量](/zh/self-hosting/environment-variable#microsoft-entra-id) 可查阅相关变量详情。</Callout>
 </Steps>
 
 <Callout type={'info'}>部署成功后，用户将可以使用 Microsoft Entra ID 中配置的用户通过身份认证并使用 LobeChat。</Callout>
