--- a/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
+++ b/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
@@ -52,7 +52,7 @@
 | `ACCESS_CODE`            | Required | Add a password for accessing this service, you can set a sufficiently long random password to "disable" access code authorization.                                                                                         |
 | `NEXTAUTH_URL`           | Optional | This URL is used to specify the callback address for Auth.js when performing OAuth authentication. It is only necessary to set it when the default generated redirect address is incorrect. `https://example.com/api/auth` |
 
-<Callout type={'info'}>You can refer to [environment variables](/en/self-hosting/environment-variable#microsoft-entra-id) for details on related variables.</Callout>
+<Callout type={'info'}>You can refer to [📘 environment variables](/en/self-hosting/environment-variable#microsoft-entra-id) for details on related variables.</Callout>
 </Steps>
 
 <Callout type={'info'}>After successful deployment, users will be able to authenticate and use LobeChat using the users configured in Microsoft Entra ID.</Callout>
