--- a/docs/self-hosting/advanced/sso-providers/auth0.mdx
+++ b/docs/self-hosting/advanced/sso-providers/auth0.mdx
@@ -52,7 +52,8 @@ import { Callout, Steps } from 'nextra/components';
 | `NEXTAUTH_URL`        | Optional | The URL is used to specify the callback address for the execution of OAuth authentication in Auth.js. It needs to be set only when the default address is incorrect. `https://example.com/api/auth` |
 
 
-  You can refer to the related variable details at [Environment Variables](/en/self-hosting/environment-variable#auth0).
+<Callout type={'info'}>You can refer to the related variable details at [📘Environment Variables](/en/self-hosting/environment-variable#auth0).</Callout>
+
 </Steps>
 
 <Callout>
