--- a/docs/self-hosting/advanced/sso-providers/auth0.mdx
+++ b/docs/self-hosting/advanced/sso-providers/auth0.mdx
@@ -65,7 +65,7 @@ import { Callout, Steps } from 'nextra/components';
 
 If your enterprise or organization already has a unified identity authentication infrastructure, you can connect to an existing single sign-on service in Applications -&gt; SSO Integrations.
 
-Auth0 supports single sign-on services such as Azure Active Directory, Slack, Google Workspace, Office 365, Zoom, and more. For a detailed list of supported services, please refer to \[this link\]\[auth0-sso-integrations\].
+Auth0 supports single sign-on services such as Azure Active Directory, Slack, Google Workspace, Office 365, Zoom, and more. For a detailed list of supported services, please refer to .
 
 ![](https://github.com/CloudPassenger/lobe-chat/assets/30863298/32650f4f-d0b0-4843-b26d-d35bad11d8a3)
 
