🐛 docs: update docs

--- a/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
+++ b/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
@@ -19,7 +19,7 @@
   </Callout>
 
   ![App Register](https://github.com/lobehub/lobe-chat/assets/13883964/4f9d83bd-b3fc-4abc-bcf4-ccbad65c219d)
-  
+
   Click on "Register".
 
   After successfully creating the application, click on the corresponding application to enter the application details page, and switch to the "Overview" tab to view the corresponding configuration information.
@@ -55,4 +55,17 @@
 <Callout type={'info'}>You can refer to [📘 environment variables](/en/self-hosting/environment-variable#microsoft-entra-id) for details on related variables.</Callout>
 </Steps>
 
-<Callout type={'info'}>After successful deployment, users will be able to authenticate and use LobeChat using the users configured in Microsoft Entra ID.</Callout>
+<Callout>After successful deployment, users will be able to authenticate and use LobeChat using the users configured in Microsoft Entra ID.</Callout>
+
+## Advanced Configuration
+
+Please explore further in the [Microsoft Entra ID Learning Center][microsoft-learn-entra].
+
+## Related Resources
+
+- [Quickstart: Register an app][microsoft-entra-register-app]
+
+[microsoft-learn-entra]: https://learn.microsoft.com/en-us/entra/identity/
+[microsoft-entra-register-app]: https://learn.microsoft.com/en-us/entra/identity-platform/quickstart-register-app
+[microsoft-azure-portal]: https://portal.azure.com/
+[microsoft-entra-id]: https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id
