--- a/docs/self-hosting/environment-variables/model-provider.mdx
+++ b/docs/self-hosting/environment-variables/model-provider.mdx
@@ -84,7 +84,7 @@ When using the `turn` mode, the API Keys will be retrieved in a round-robin mann
 - Type: Optional
 - Description: The API version of Azure, following the format YYYY-MM-DD
 - Default: `2023-08-01-preview`
-- Example: `2023-05-15`, refer to 
+- Example: `2023-05-15`, refer to [latest version][azure-api-verion-url]
 
 ## ZHIPU AI
 
@@ -171,3 +171,7 @@ When using the `turn` mode, the API Keys will be retrieved in a round-robin mann
 - Description: This is the API key you applied for in the Mistral AI service
 - Default: -
 - Example: `xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx=`
+
+
+[azure-api-verion-url]: https://docs.microsoft.com/zh-cn/azure/developer/javascript/api-reference/es-modules/azure-sdk/ai-translation/translationconfiguration?view=azure-node-latest#api-version
+[openai-api-page]: https://platform.openai.com/account/api-keys
