--- a/docs/self-hosting/advanced/authentication.mdx
+++ b/docs/self-hosting/advanced/authentication.mdx
@@ -22,4 +22,7 @@ The order corresponds to the display order of the SSO providers.
 
 ## Other SSO Providers
 
-Please refer to the  documentation and feel free to submit a Pull Request.
+Please refer to the [NextAuth.js][next-auth-js] documentation and feel free to submit a Pull Request.
+
+
+[next-auth-js]: https://next-auth.js.org/providers
