📝 docs: update docs

--- a/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.zh-CN.mdx
+++ b/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.zh-CN.mdx
@@ -12,14 +12,13 @@ import { Callout, Steps } from 'nextra/components';
   在 `Redirect URI (optional)` 中，应用类型选择 `Web`，Callback URL, 处填写：
 
   ```bash
-  https:// < your-domain > /api/auth/callback/azure-ad
+  https://<your-domain>/api/auth/callback/azure-ad
   ```
 
-  {' '}
 
   <Callout type={'info'}>
-    - 可以在 Register 后再填写或修改 Redirect URIs，但是务必保证填写的 URL 与部署的 URL 一致。 -
-      your-domain 请填写自己的域名
+    - 可以在 Register 后再填写或修改 Redirect URIs，但是务必保证填写的 URL 与部署的 URL 一致。
+    - your-domain 请填写自己的域名
   </Callout>
 
   ![App Register](https://github.com/lobehub/lobe-chat/assets/13883964/4f9d83bd-b3fc-4abc-bcf4-ccbad65c219d)
