--- a/locales/ar/setting.json
+++ b/locales/ar/setting.json
@@ -99,12 +99,12 @@
         "title": "مفتاح واجهة برمجة التطبيقات"
       }
     },
-    "groq": {
+    "Groq": {
       "title": "Groq",
       "token": {
-        "desc": "املأ مفتاح واجهة برمجة التطبيقات الخاص بـ Groq",
-        "placeholder": "مفتاح واجهة برمجة التطبيقات الخاص بـ Groq",
-        "title": "مفتاح واجهة برمجة التطبيقات"
+        "desc": "أدخل مفتاح API الخاص بـ Groq",
+        "placeholder": "مفتاح API Groq",
+        "title": "مفتاح API"
       }
     },
     "Mistral": {
