--- a/locales/it-IT/error.json
+++ b/locales/it-IT/error.json
@@ -38,6 +38,7 @@
     "AzureBizError": "Errore nella richiesta del servizio Azure AI, controlla le informazioni seguenti o riprova",
     "BedrockBizError": "Errore nella richiesta del servizio Bedrock, controlla le informazioni seguenti o riprova",
     "GoogleBizError": "Errore nella richiesta del servizio Google, controlla le informazioni seguenti o riprova",
+    "GroqBizError": "Errore del servizio Groq, controlla le informazioni seguenti o riprova",
     "InvalidAccessCode": "Password incorrect or empty, please enter the correct access password, or add a custom API Key",
     "InvalidAnthropicAPIKey": "La chiave API Anthropic non è valida o è vuota. Si prega di controllare la chiave API Anthropic e riprovare.",
     "InvalidAzureAPIKey": "Chiave API Azure non corretta o vuota, controlla la chiave API Azure e riprova",
@@ -91,6 +92,10 @@
       "Google": {
         "description": "Inserisci la tua chiave API Google per iniziare la sessione. L'applicazione non memorizzerà la tua chiave API",
         "title": "Utilizza la chiave API Google personalizzata"
+      },
+      "Groq": {
+        "description": "Inserisci la tua chiave API Groq per iniziare la sessione. L'applicazione non memorizzerà la tua chiave API",
+        "title": "Usa una chiave API Groq personalizzata"
       },
       "Mistral": {
         "description": "Inserisci la tua chiave API Mistral AI per iniziare la sessione. L'applicazione non memorizzerà la tua chiave API.",
