--- a/locales/zh-TW/error.json
+++ b/locales/zh-TW/error.json
@@ -38,6 +38,7 @@
     "AzureBizError": "請求 Azure AI 服務出錯，請根據以下信息排查或重試",
     "BedrockBizError": "請求 Bedrock 服務出錯，請根據以下信息排查或重試",
     "GoogleBizError": "請求 Google 服務出錯，請根據以下信息排查或重試",
+    "GroqBizError": "請求 Groq 服務出錯，請根據以下信息排查或重試",
     "InvalidAccessCode": "密碼不正確或為空，請輸入正確的訪問密碼，或添加自定義 API 金鑰",
     "InvalidAnthropicAPIKey": "Anthropic API 金鑰不正確或為空，請檢查 Anthropic API 金鑰後重試",
     "InvalidAzureAPIKey": "Azure API Key 不正確或為空，請檢查 Azure API Key 後重試",
@@ -91,6 +92,10 @@
       "Google": {
         "description": "輸入你的 Google API Key 即可開始會話。應用不會記錄你的 API Key",
         "title": "使用自定義 Google API Key"
+      },
+      "Groq": {
+        "description": "輸入你的 Groq API 金鑰即可開始會話。應用不會記錄你的 API 金鑰",
+        "title": "使用自定義 Groq API 金鑰"
       },
       "Mistral": {
         "description": "輸入你的 Mistral AI API Key 即可開始會話。應用不會記錄你的 API Key",
