:memo: docs: add document for comma seperated index url

--- a/docs/self-hosting/environment-variables/basic.mdx
+++ b/docs/self-hosting/environment-variables/basic.mdx
@@ -202,7 +202,7 @@ The above example sets the `SERPAPI_API_KEY` of the `search-engine` plugin to `x
 ### `AGENTS_INDEX_URL`
 
 - Type: Optional
-- Description: Index address of the LobeChat assistant market. If you have deployed the assistant market service on your own, you can use this variable to override the default market address.
+- Description: Index address of the LobeChat assistant market. If you have deployed the assistant market service on your own, you can use this variable to override the default market address, it supports comma-separated values to configure multiple index addresses.
 - Default: `https://chat-agents.lobehub.com`
 
 [auth0-client-page]: https://manage.auth0.com/dashboard
