:sparkles: feat: support configuring multiple plugin index

--- a/docs/self-hosting/environment-variables/basic.mdx
+++ b/docs/self-hosting/environment-variables/basic.mdx
@@ -173,7 +173,7 @@ Further reading:
 ### `PLUGINS_INDEX_URL`
 
 - Type: Optional
-- Description: Index address of the LobeChat plugin market. If you have deployed the plugin market service on your own, you can use this variable to override the default plugin market address.
+- Description: Index address of the LobeChat plugin market. If you have deployed the plugin market service on your own, you can use this variable to override the default plugin market address, it supports comma-separated values to configure multiple index addresses.
 - Default: `https://chat-plugins.lobehub.com`
 
 ### `PLUGIN_SETTINGS`
