📝 docs: update docs

--- a/docs/self-hosting/environment-variables/analytics.mdx
+++ b/docs/self-hosting/environment-variables/analytics.mdx
@@ -27,12 +27,12 @@ We have integrated several free/open-source data analytics services in LobeChat 
 - Default: `-`
 - Example: `1`
 
-### `GOOGLE_ANALYTICS_ID`
+### `GOOGLE_ANALYTICS_MEASUREMENT_ID`
 
 - Type: Required
-- Description: Google Analytics measurement ID，you can get it from the Google Analytics dashboard.
+- Description: Google Analytics Measurement ID，you can get it from the Google Analytics dashboard.
 - Default: `-`
-- Example: `G-XYZ`
+- Example: `G-63LP2TV03T`
 
 ## Posthog Analytics
 
