--- a/docs/self-hosting/environment-variables/analytics.zh-CN.mdx
+++ b/docs/self-hosting/environment-variables/analytics.zh-CN.mdx
@@ -27,12 +27,12 @@
 - 默认值： `-`
 - 示例：`1`
 
-### `GOOGLE_ANALYTICS_ID`
+### `GOOGLE_ANALYTICS_MEASUREMENT_ID`
 
 - 类型：必选
-- 描述：Google Analytics 的项目 ID，如果开启了 Google Analytics，此项必填
+- 描述：Google Analytics 的 Measurement ID，如果开启了 Google Analytics，此项必填
 - 默认值： `-`
-- 示例：`G-XYZ`
+- 示例：`G-63LP2TV03T`
 
 ## Posthog Analytics
 
